UI/Fix: large symbol names no longer overflow from their cells when expanding symbols

--- a/frontend/src/components/views/Dashboard/StreamList/WindowTicks/styles.module.scss
+++ b/frontend/src/components/views/Dashboard/StreamList/WindowTicks/styles.module.scss
@@ -82,6 +82,7 @@
     align-items: center;
     background-color: white;
     z-index: 2;
+    word-break: break-all;
   }
 
   .colTitle,
